Create product with ajax, query

--- a/DemoDotNet.WebMVC/Areas/Admin/Views/ProductCategory/Create.cshtml
+++ b/DemoDotNet.WebMVC/Areas/Admin/Views/ProductCategory/Create.cshtml
@@ -63,8 +63,10 @@
 @section Scripts{
     <script src="~/Assets/admin/vendor/toastr/js/toastr.min.js"></script>
     <script src="~/Assets/js/toastr.js"></script>
+    <script>
+
+    </script>
 }
 @section Links{
     <link rel="stylesheet" href="~/Assets/Admin/vendor/toastr/css/toastr.min.css">
-
 }
