--- a/DemoDotNet.WebMVC/Areas/Admin/Views/Shared/_Sidebar.cshtml
+++ b/DemoDotNet.WebMVC/Areas/Admin/Views/Shared/_Sidebar.cshtml
@@ -14,6 +14,7 @@
                 </a>
                 <ul aria-expanded="false">
                     <li><a href="/admin/danh-muc-san-pham">Danh mục sản phẩm</a></li>
+                    <li><a href="/admin/san-pham">Sản phẩm</a></li>
                 </ul>
             </li>
         </ul>
